test/lattests/extensions/objects1/bad/newVoid.lat
int main() {
    int x = new void;
    return 0;
}